<resources>
    <string name="app_name">Brighton Shop</string>
    <string name="welcome_to_your_student_marketplace">Welcome to your student marketplace</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_user_login">Already an user? Login</string>
</resources>