<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="avtivity_signup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:backgroundTint="#686464">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/welcome_to_your_student_marketplace" />


        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="24sp"
            android:textColor="#229799"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/signupEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/signupConfirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#229799" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_an_user_login"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="19sp" />
    </LinearLayout>
</ScrollView>
